ggml/5d/d782707e3634fbd101f080c502722e6a367ac8/ggml-2-x86-cpu/ctest_debug.log
+ cmake -DCMAKE_BUILD_TYPE=Debug ..
-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Git: /usr/bin/git (found version "2.34.1") 
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- CMAKE_SYSTEM_PROCESSOR: x86_64
GNU ld (GNU Binutils for Ubuntu) 2.38
-- x86 detected
-- Linux detected
-- x86 detected
-- Linux detected
-- Configuring done (0.4s)
-- Generating done (0.0s)
-- Build files have been written to: /home/ggml/work/ggml/build-ci-debug

real	0m0.427s
user	0m0.280s
sys	0m0.096s
+ make -j
[  1%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  2%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  6%] Linking C shared library libggml.so
[  6%] Built target ggml
[  7%] Building C object tests/CMakeFiles/test-vec1.dir/test-vec1.c.o
[  9%] Building CXX object tests/CMakeFiles/test-grad0.dir/test-grad0.cpp.o
[ 10%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 11%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[ 12%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 13%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 14%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[ 15%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 17%] Building C object tests/CMakeFiles/test1.dir/test1.c.o
[ 18%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 19%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 20%] Building C object tests/CMakeFiles/test3.dir/test3.c.o
[ 21%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 22%] Building C object tests/CMakeFiles/test2.dir/test2.c.o
[ 23%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 25%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 26%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 27%] Linking C executable ../bin/test-vec0
/home/ggml/work/ggml/tests/test2.c: In function ‘main’:
/home/ggml/work/ggml/tests/test2.c:26:65: error: ‘GGML_OPT_LBFGS’ undeclared (first use in this function); did you mean ‘GGML_OP_LOG’?
   26 |     struct ggml_opt_params opt_params = ggml_opt_default_params(GGML_OPT_LBFGS);
      |                                                                 ^~~~~~~~~~~~~~
      |                                                                 GGML_OP_LOG
/home/ggml/work/ggml/tests/test2.c:26:65: note: each undeclared identifier is reported only once for each function it appears in
[ 28%] Linking C executable ../bin/test-mul-mat0
In file included from /home/ggml/work/ggml/tests/test2.c:2:
/home/ggml/work/ggml/tests/test2.c:82:28: error: ‘GGML_OPT_OK’ undeclared (first use in this function); did you mean ‘GGML_OP_LOG’?
   82 |         GGML_ASSERT(res == GGML_OPT_OK);
      |                            ^~~~~~~~~~~
/home/ggml/work/ggml/src/../include/ggml/ggml.h:258:15: note: in definition of macro ‘GGML_ASSERT’
  258 |         if (!(x)) { \
      |               ^
make[2]: *** [tests/CMakeFiles/test2.dir/build.make:76: tests/CMakeFiles/test2.dir/test2.c.o] Error 1
/home/ggml/work/ggml/tests/test3.c: In function ‘main’:
/home/ggml/work/ggml/tests/test3.c:19:65: error: ‘GGML_OPT_LBFGS’ undeclared (first use in this function); did you mean ‘GGML_OP_LOG’?
   19 |     struct ggml_opt_params opt_params = ggml_opt_default_params(GGML_OPT_LBFGS);
      |                                                                 ^~~~~~~~~~~~~~
      |                                                                 GGML_OP_LOG
/home/ggml/work/ggml/tests/test3.c:19:65: note: each undeclared identifier is reported only once for each function it appears in
In file included from /home/ggml/work/ggml/tests/test3.c:1:
/home/ggml/work/ggml/tests/test3.c:71:28: error: ‘GGML_OPT_OK’ undeclared (first use in this function); did you mean ‘GGML_OP_LOG’?
   71 |         GGML_ASSERT(res == GGML_OPT_OK);
      |                            ^~~~~~~~~~~
/home/ggml/work/ggml/src/../include/ggml/ggml.h:258:15: note: in definition of macro ‘GGML_ASSERT’
  258 |         if (!(x)) { \
      |               ^
make[2]: *** [tests/CMakeFiles/test3.dir/build.make:76: tests/CMakeFiles/test3.dir/test3.c.o] Error 1
[ 29%] Building C object tests/CMakeFiles/test-xpos.dir/test-xpos.c.o
[ 30%] Linking C executable ../bin/test0
make[1]: *** [CMakeFiles/Makefile2:619: tests/CMakeFiles/test3.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:593: tests/CMakeFiles/test2.dir/all] Error 2
[ 31%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 32%] Linking C executable ../bin/test-conv-transpose
[ 34%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 35%] Linking C executable ../bin/test-dup
[ 36%] Linking CXX executable ../bin/test-opt
[ 36%] Built target test-mul-mat0
[ 37%] Linking C executable ../bin/test-customop
[ 38%] Linking CXX executable ../bin/test-grad0
[ 39%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 40%] Building CXX object tests/CMakeFiles/test-backend-buffer.dir/test-backend-buffer.cpp.o
[ 40%] Built target test-vec0
[ 42%] Linking C executable ../bin/test1
[ 43%] Built target test-conv-transpose
[ 43%] Linking C executable ../bin/test-pool
[ 44%] Linking C executable ../bin/test-rel-pos
[ 44%] Built target test0
[ 45%] Linking C executable ../bin/test-xpos
[ 45%] Built target test-dup
[ 46%] Linking CXX executable ../bin/test-backend-buffer
[ 46%] Built target test-opt
[ 46%] Built target test1
[ 46%] Built target test-pool
[ 46%] Built target test-grad0
[ 46%] Built target test-customop
[ 46%] Built target test-xpos
[ 46%] Built target test-rel-pos
[ 47%] Linking C executable ../bin/test-vec1
[ 48%] Linking CXX executable ../bin/test-quantize-fns
[ 48%] Built target test-backend-buffer
[ 48%] Built target test-vec1
[ 50%] Linking C executable ../bin/test-mul-mat2
[ 50%] Built target test-mul-mat2
[ 50%] Built target test-quantize-fns
/home/ggml/work/ggml/tests/test-conv2d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/ggml/work/ggml/tests/test-conv1d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 51%] Linking CXX executable ../bin/test-mul-mat
[ 52%] Linking CXX executable ../bin/test-conv2d
[ 53%] Linking CXX executable ../bin/test-conv1d
[ 53%] Built target test-mul-mat
[ 53%] Built target test-conv2d
[ 53%] Built target test-conv1d
[ 54%] Linking CXX executable ../bin/test-quantize-perf
[ 54%] Built target test-quantize-perf
[ 55%] Linking CXX static library libcommon.a
[ 55%] Built target common
make: *** [Makefile:146: all] Error 2

real	0m3.416s
user	0m10.168s
sys	0m1.197s
